--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "module": "./dist/dns-relay.js",
   "exports": {
     ".": {
-      "require":  "./dist/cjs/dns-relay.js",
+      "require": "./dist/cjs/dns-relay.js",
       "default": "./dist/dns-relay.js"
-    }
+    },
+    "./dist/": "./dist/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -37,6 +38,7 @@
   },
   "homepage": "https://github.com/nim579/dns_relay#readme",
   "dependencies": {
+    "commander": "^8.3.0",
     "dns-packet": "^5.3.0",
     "got": "^11.8.2"
   },
